@@ -96,6 +96,10 @@ calculators.
   update the other information (Version, etc).
   For example, when I import pedrom89.tib, it still displays v0.80 instead of v0.81
 
+* A known problem is that you can only select 89? files when sending to an 89
+etc. It would really be nice if you could send all of 89?, 92?, 9x? and v2?
+to all the models.
+
 
 roms
 ====
