@@ -458,6 +458,15 @@ GtkWidget* display_popup_menu(void)
 		gtk_widget_set_sensitive(data, FALSE);
 	}
 
+	// 
+	data = glade_xml_get_widget(xml, "normal_view1");
+	gtk_widget_set_sensitive(data, FALSE);
+	data = glade_xml_get_widget(xml, "large_view1");
+	gtk_widget_set_sensitive(data, FALSE);
+	data = glade_xml_get_widget(xml, "full_view1");
+	gtk_widget_set_sensitive(data, FALSE);
+
+
 	//while(gtk_events_pending()) gtk_main_iteration();
 
 	return menu;
